<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.6">

            <TextView
                android:id="@+id/tv_location_layout_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_client"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_location_layout_vehicule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_voiture"/>
            <TextView
                android:id="@+id/tv_location_layout_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_dates"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.4">
            <TextView
                android:id="@+id/tv_location_layout_prix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_prix"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="16sp" />

        </RelativeLayout>



    </LinearLayout>



</android.support.v7.widget.CardView>